Reorder hamcrest, junit, mockito and powermock depdencies

--- a/pom.xml
+++ b/pom.xml
@@ -435,14 +435,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${cs.junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-library</artifactId>
+      <artifactId>hamcrest-all</artifactId>
       <version>${cs.hamcrest.version}</version>
       <scope>test</scope>
     </dependency>
@@ -451,17 +445,35 @@
       <artifactId>mockito-all</artifactId>
       <version>${cs.mockito.version}</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>hamcrest-core</artifactId>
+          <groupId>org.hamcrest</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
-	  <groupId>org.powermock</groupId>
-	  <artifactId>powermock-module-junit4</artifactId>
-	  <version>${cs.powermock.version}</version>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${cs.junit.version}</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>hamcrest-core</artifactId>
+          <groupId>org.hamcrest</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
-	  <groupId>org.powermock</groupId>
-	  <artifactId>powermock-api-mockito</artifactId>
-	  <version>${cs.powermock.version}</version>
-	  <scope>test</scope>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${cs.powermock.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>${cs.powermock.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
