--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,8 @@ before_install:
   - sudo apt-get install genisoimage
   - sudo pip install --upgrade pip
   - sudo pip install --allow-external mysql-connector-python mysql-connector-python
+  - sudo rm /etc/mavenrc
+  - export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=500m -Djava.security.egd=file:/dev/./urandom"
 install:
   - "mvn -Pdeveloper,systemvm clean install"
   - sudo pip install --upgrade tools/marvin/dist/Marvin-*.tar.gz
