--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,3 @@
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing,
-# software distributed under the License is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  See the License for the
-# specific language governing permissions and limitations
-# under the License.
 language: java
 jdk:
   - oraclejdk7
@@ -27,18 +11,37 @@ addons:
     packages:
 services:
   - mysql
+env:
+  matrix:
+    - TESTS="smoke/test_affinity_groups smoke/test_primary_storage"
+    - TESTS="smoke/test_deploy_vms_with_varied_deploymentplanners smoke/test_disk_offerings smoke/test_global_settings smoke/test_multipleips_per_nic"
+    - TESTS="smoke/test_portable_publicip smoke/test_privategw_acl smoke/test_public_ip_range smoke/test_pvlan smoke/test_regions smoke/test_network"
+    - TESTS="smoke/test_reset_vm_on_reboot smoke/test_resource_detail smoke/test_routers smoke/test_guest_vlan_range smoke/test_iso smoke/test_non_contigiousvlan"
+    - TESTS="smoke/test_secondary_storage smoke/test_service_offerings smoke/test_ssvm smoke/test_templates smoke/test_over_provisioning"
+    - TESTS="smoke/test_volumes smoke/test_vpc_vpn smoke/misc/test_deploy_vm smoke/test_vm_life_cycle component/test_mm_max_limits"
+    - TESTS="component/test_acl_isolatednetwork_delete component/test_mm_domain_limits component/test_acl_listsnapshot"
+    - TESTS="component/test_acl_listvm component/test_acl_sharednetwork_deployVM-impersonation component/test_acl_sharednetwork"
+    - TESTS="component/test_snapshots component/test_acl_listvolume"
 before_install:
   - sudo apt-get update
   - sudo apt-get install genisoimage
   - sudo pip install --upgrade pip
   - sudo pip install --allow-external mysql-connector-python mysql-connector-python
+  - sudo pip install texttable lxml
   - sudo rm /etc/mavenrc
   - export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=500m -Djava.security.egd=file:/dev/./urandom"
 install:
-  - "mvn -Pdeveloper,systemvm clean install"
+  - "mvn -Pdeveloper,systemvm -Dsimulator clean install"
   - sudo pip install --upgrade tools/marvin/dist/Marvin-*.tar.gz
   - mvn -q -Pdeveloper -pl developer -Ddeploydb
   - mvn -q -Pdeveloper -pl developer -Ddeploydb-simulator
+before_script:
+  - "mvn -Dsimulator -pl :cloud-client-ui jetty:run 2>&1 > /tmp/jetty-log &"
+  - "while ! nc -vzw 5 localhost 8096 2>&1 > /dev/null; do grep Exception /tmp/jetty-log; sleep 10; done"
+  - "python -m marvin.deployDataCenter -i setup/dev/advanced.cfg 2>&1 || true"
+  - mkdir -p integration-test-results/smoke/misc
+  - mkdir -p integration-test-results/component
 script:
-  - mysql -u root -e 'show databases'
+  - "for suite in ${TESTS}; do nosetests --with-xunit --xunit-file=integration-test-results/${suite}.xml --with-marvin --marvin-config=setup/dev/advanced.cfg test/integration/${suite}.py -s -a tags=advanced,required_hardware=false --zone=Sandbox-simulator --hypervisor=simulator || true ; done"
+  - python ./tools/travis/xunit-reader.py integration-test-results/
 
