--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ services:
 matrix:
   fast_finish: true
 env:
+  global:
+    - "SKIP_UNIT_TESTS=$(if [ $(echo $TRAVIS_JOB_NUMBER | cut -d. -f2) -ne 1 ]; then echo true; else echo false; fi)"
   matrix:
     - TESTS="smoke/test_affinity_groups smoke/test_primary_storage"
     - TESTS="smoke/test_deploy_vms_with_varied_deploymentplanners smoke/test_disk_offerings smoke/test_global_settings smoke/test_multipleips_per_nic"
@@ -33,7 +35,7 @@ before_install:
   - sudo rm /etc/mavenrc
   - export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=500m -Djava.security.egd=file:/dev/./urandom"
 install:
-  - "mvn -Pdeveloper,systemvm -Dsimulator clean install"
+  - "mvn -Pdeveloper,systemvm -Dsimulator -DskipTests=${SKIP_UNIT_TESTS} clean install"
   - sudo pip install --upgrade tools/marvin/dist/Marvin-*.tar.gz
   - mvn -q -Pdeveloper -pl developer -Ddeploydb
   - mvn -q -Pdeveloper -pl developer -Ddeploydb-simulator
