--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,6 @@
 language: java
 jdk:
   - oraclejdk7
-cache:
-  directories:
-    - $HOME/.cache
-    - $HOME/.m2
 sudo: true
 addons:
   apt:
@@ -65,4 +61,4 @@ script:
   - "for suite in ${TESTS}; do nosetests --with-xunit --xunit-file=integration-test-results/${suite}.xml --with-marvin --marvin-config=setup/dev/advanced.cfg test/integration/${suite}.py -s -a tags=advanced,required_hardware=false --zone=Sandbox-simulator --hypervisor=simulator || true ; done"
   - python ./tools/travis/xunit-reader.py integration-test-results/
 after_script: "mvn -Dsimulator -pl client jetty:stop 2>&1"
-after_failure: find /tmp/MarvinLogs -type f -exec echo -e "Printing logfile {} :\n" \; -exec cat {} \;
+after_failure: > find /tmp/MarvinLogs -type f -exec echo -e "Printing logfile {} :\n" \; -exec cat {} \;
