--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
   fast_finish: true
 env:
   global:
-    - "SKIP_UNIT_TESTS=$(if [ $(echo $TRAVIS_JOB_NUMBER | cut -d. -f2) -ne 1 ]; then echo true; else echo false; fi)"
+    - SKIP_UNIT_TESTS=$(if [ $(echo $TRAVIS_JOB_NUMBER | cut -d. -f2) -ne 1 ]; then echo true; else echo false; fi)
   matrix:
     - TESTS="smoke/test_affinity_groups smoke/test_primary_storage"
     - TESTS="smoke/test_deploy_vms_with_varied_deploymentplanners smoke/test_disk_offerings smoke/test_global_settings smoke/test_multipleips_per_nic"
@@ -47,18 +47,18 @@ before_install:
   - sudo rm /etc/mavenrc
   - export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=500m -Djava.security.egd=file:/dev/./urandom"
 install:
-  - "mvn -Pdeveloper,systemvm -Dsimulator -DskipTests=${SKIP_UNIT_TESTS} clean install"
+  - mvn -Pdeveloper,systemvm -Dsimulator -DskipTests=${SKIP_UNIT_TESTS} clean install
   - sudo pip install --upgrade tools/marvin/dist/Marvin-*.tar.gz
   - mvn -q -Pdeveloper -pl developer -Ddeploydb
   - mvn -q -Pdeveloper -pl developer -Ddeploydb-simulator
 before_script:
-  - "mvn -Dsimulator -pl :cloud-client-ui jetty:run 2>&1 > /tmp/jetty-log &"
-  - "while ! nc -vzw 5 localhost 8096 2>&1 > /dev/null; do grep Exception /tmp/jetty-log; sleep 10; done"
-  - "python -m marvin.deployDataCenter -i setup/dev/advanced.cfg 2>&1 || true"
+  - mvn -Dsimulator -pl :cloud-client-ui jetty:run 2>&1 > /tmp/jetty-log &
+  - while ! nc -vzw 5 localhost 8096 2>&1 > /dev/null; do grep Exception /tmp/jetty-log; sleep 10; done
+  - python -m marvin.deployDataCenter -i setup/dev/advanced.cfg 2>&1 || true
   - mkdir -p integration-test-results/smoke/misc
   - mkdir -p integration-test-results/component
 script:
-  - "for suite in ${TESTS}; do nosetests --with-xunit --xunit-file=integration-test-results/${suite}.xml --with-marvin --marvin-config=setup/dev/advanced.cfg test/integration/${suite}.py -s -a tags=advanced,required_hardware=false --zone=Sandbox-simulator --hypervisor=simulator || true ; done"
+  - for suite in ${TESTS}; do nosetests --with-xunit --xunit-file=integration-test-results/${suite}.xml --with-marvin --marvin-config=setup/dev/advanced.cfg test/integration/${suite}.py -s -a tags=advanced,required_hardware=false --zone=Sandbox-simulator --hypervisor=simulator || true ; done
   - python ./tools/travis/xunit-reader.py integration-test-results/
-after_script: "mvn -Dsimulator -pl client jetty:stop 2>&1"
-after_failure: > find /tmp/MarvinLogs -type f -exec echo -e "Printing logfile {} :\n" \; -exec cat {} \;
+after_script: mvn -Dsimulator -pl client jetty:stop 2>&1
+after_failure: find /tmp/MarvinLogs -type f -exec echo -e "Printing logfile {} :\n" \; -exec cat {} \;
