Increase advanced config limits

--- a/setup/dev/advanced.cfg
+++ b/setup/dev/advanced.cfg
@@ -215,6 +215,42 @@
         {
             "name": "enable.dynamic.scale.vm",
             "value": "true"
+        },
+        {
+            "name": "mem.overprovisioning.factor",
+            "value": "10"
+        },
+        {
+            "name": "cpu.overprovisioning.factor",
+            "value": "10"
+        },
+        {
+            "name": "storage.overprovisioning.factor",
+            "value": "10"
+        },
+        {
+            "name": "max.account.memory",
+            "value": "-1"
+        },
+        {
+            "name": "max.domain.memory",
+            "value": "-1"
+        },
+        {
+            "name": "max.account.cpu",
+            "value": "-1"
+        },
+        {
+            "name": "max.domain.cpu",
+            "value": "-1"
+        },
+        {
+            "name": "max.account.storage",
+            "value": "-1"
+        },
+        {
+            "name": "max.domain.storage",
+            "value": "-1"
         }
     ],
     "mgtSvr": [
